<resources>
    <string name="app_name">Sticky Tasks</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_tasks">Tasks</string>
    <string name="menu_pomodoro">Pomodoro</string>
    <string name="menu_notifications">Reminders</string>
    <string name="set">Set</string>
    <string name="hours">Hours</string>
    <string name="minute">Minutes</string>
    <string name="work_time">Work Time</string>
    <string name="break_time">Break Time</string>
    <string name="add_task">New Task</string>
    <string name="add_remind">New Reminder</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="your_task">Your task:</string>


</resources>