<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="edu.harvard.cs50.stickyTasks.ui.tasks.TasksFragment"
        android:label="@string/menu_tasks"
        tools:layout="@layout/fragment_tasks" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="edu.harvard.cs50.stickyTasks.ui.pomodoro.PomodoroFragment"
        android:label="@string/menu_pomodoro"
        tools:layout="@layout/fragment_pomodoro" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="edu.harvard.cs50.stickyTasks.ui.notifications.NotificationsFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>