<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/dark_grey"
    tools:showIn="navigation_view">

    <TextView
        android:id="@+id/text_date_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="26sp"
        android:textStyle="bold" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/menu_tasks" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/menu_pomodoro" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@android:drawable/stat_notify_chat"
            android:title="@string/menu_notifications" />
    </group>
</menu>